@@ -8,6 +8,7 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2019-07-13] RBC: fixed rare allocation bug w.r.t. bad r-ready messages
 * [2019-07-11] RFC4880: added member 'expired' to TMCG_OpenPGP_Signature, 
                TMCG_OpenPGP_Subkey, and TMCG_OpenPGP_Pubkey
 * [2019-07-10] RFC4880: changed length encoding for strings and subpackets
